[metadata]
name = sassyjson
version = 1.0.0
author = Jonas Hahn
author_email = jonas.hahn@ecodia.de
description = Automatically converts python objects to json strings and json strings back to python objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecodia/sassyjson
project_urls =
    Bug Tracker = https://github.com/ecodia/sassyjson/issues
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir = src
packages = sassyjson
python_requires = >=3.6
